feat: EasyTier二进制内置到assets；修复启动chmod权限问题；修复开启卡片布局空白过大